--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,29 @@
 body { 
     font-family: 'Anton', sans-serif;
     font-family: 'Merriweather Sans', sans-serif;
-
+    background-color: red; 
 
 }
+h1, h2, h3, h4, h5, h5, h6 {
+    font-family: 'Montserrat Alternates', sans-serif;
+    text-align:center;
+}
+h1 {
+    font-size: 10pt; 
+}
+header {
+    text-align: center;
+
+}
+#gallery {
+    border: 2px solid #C0FAA7;
+    margin-bottom:2rem;
+    }
+    
+    #gallery img { 
+        max-width:100%;
+    }
+    
+    #gallery figure {
+        text-align:center;
+    }
