--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,58 @@
 body { 
-    font-family: 'Anton', sans-serif;
-    font-family: 'Merriweather Sans', sans-serif;
-    background-color: red; 
-
+    
+    background-color: rgb(209, 136, 136);
+    font-family:Nunito;
+    font-family:Raleway;
 }
 h1, h2, h3, h4, h5, h5, h6 {
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family:Nunito;
     text-align:center;
+    font-size: 40pt;
 }
 h1 {
-    font-size: 10pt; 
+    font-size: 20pt; 
+    text-align: center;
+}
+#Introduction {
+max-width: 50%;
+text-align: center;
+
 }
 header {
     text-align: center;
 
 }
-#gallery {
-    border: 2px solid #C0FAA7;
-    margin-bottom:2rem;
-    }
+#Bio {
+    text-align: center;
     
-    #gallery img { 
-        max-width:100%;
-    }
-    
-    #gallery figure {
-        text-align:center;
-    }
+
+}
+
+#WorkStation {
+
+text-align: center;
+
+}
+#CustomerReview {
+    text-align: center;
+
+}
+
+#Contact {
+text-align: center;
+background-color:rgb(78, 130, 197)
+}
+
+#Gallery {
+display: flex;
+justify-content: space-around;
+    max-width:100%;
+    max-height:100%;
+    text-align: center;
+    background-color:rgb(78, 130, 197)
+}
+
+#Gallery figure {
+text-align:center ;
+
+}
